--- a/src/app/pages/order/list-order/list-order.component.html
+++ b/src/app/pages/order/list-order/list-order.component.html
@@ -55,7 +55,7 @@
                 </td>
             </ng-container>
 
-            <ng-container matColumnDef="dateScheduled">
+            <!-- <ng-container matColumnDef="dateScheduled">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold">
                     Ngày đặt
                 </th>
@@ -71,7 +71,7 @@
                 <td mat-cell *matCellDef="let order" class="text-truncate">
                     {{ order.timeScheduled }}
                 </td>
-            </ng-container>
+            </ng-container> -->
 
             <ng-container matColumnDef="isScheduled">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold">
