--- a/src/app/theme/shared/components/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/theme/shared/components/confirm-dialog/confirm-dialog.component.html
@@ -1,6 +1,8 @@
-<h2 mat-dialog-title>{{ data.title }}</h2>
-<mat-dialog-content>{{ data.message }}</mat-dialog-content>
-<mat-dialog-actions>
-    <button mat-button mat-dialog-close>No</button>
-    <button mat-button color="warn" [mat-dialog-close]="true" cdkFocusInitial>Yes</button>
-</mat-dialog-actions>
+<div style="max-width: 250px;">
+    <h2 mat-dialog-title class="f-poppins">{{ data.title }}</h2>
+    <mat-dialog-content class="f-poppins">{{ data.message }}</mat-dialog-content>
+    <mat-dialog-actions>
+        <button mat-button mat-dialog-close>No</button>
+        <button mat-button color="warn" [mat-dialog-close]="true" cdkFocusInitial>Yes</button>
+    </mat-dialog-actions>
+</div>
