--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,8 +49,8 @@ $manage-shop-theme: mat.define-light-theme((color: (primary: $manage-shop-primar
 @import 'scss/themes/minixs/function';
 
 // regular style toast
-@import 'ngx-toastr/toastr';
-@import 'ngx-toastr/toastr-bs5-alert';
+@import '../node_modules/ngx-toastr/toastr';
+@import '../node_modules/ngx-toastr/toastr-bs5-alert.scss';
 
 // icon
 @import 'scss/themes/font/datta-icon';
