--- a/src/app/pages/shop/list-shop/list-shop.component.html
+++ b/src/app/pages/shop/list-shop/list-shop.component.html
@@ -15,7 +15,7 @@
             </td>
         </ng-container>
 
-        <ng-container matColumnDef="sections">
+        <!-- <ng-container matColumnDef="sections">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> Danh mục </th>
             <td mat-cell *matCellDef="let shop">
                 <div class="text-truncate" style="max-width: 200px;"
@@ -29,12 +29,14 @@
                     <div>Không có danh mục</div>
                 </ng-template>
             </td>
-        </ng-container>
+        </ng-container> -->
 
         <ng-container matColumnDef="shopAddress">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> Địa chỉ </th>
-            <td mat-cell *matCellDef="let shop" class="text-truncate" style="max-width: 250px;">
-                {{shop.shopAddress}}
+            <td mat-cell *matCellDef="let shop" class="text-truncate" title="{{shop.shopAddress}}">
+                <a href="javascript:" (click)="openGoogleMapDialog(shop.shopAddress)">
+                    {{shop.shopAddress}}
+                </a>
             </td>
         </ng-container>
 
@@ -70,12 +72,12 @@
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef class="fw-bold text-truncate">Actions</th>
             <td mat-cell *matCellDef="let shop" class="text-truncate">
-                <button mat-icon-button color="accent" title="Thêm section" (click)="openAddSection(shop)">
+                <!-- <button mat-icon-button color="accent" title="Thêm section" (click)="openAddSection(shop)">
                     <mat-icon>add</mat-icon>
                 </button>
                 <button mat-icon-button color="primary" (click)="openEditForm(shop)">
                     <mat-icon>edit</mat-icon>
-                </button>
+                </button> -->
                 <button mat-icon-button color="warn" (click)="deleteShop(shop.key)">
                     <mat-icon>delete</mat-icon>
                 </button>
