--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -1,5 +1,5 @@
-<!-- <app-card cardTitle="Quản lý cửa hàng" [options]="false">
-    <mat-tab-group>
+<app-card *ngIf="isAdmin" cardTitle="Quản lý cửa hàng" [options]="false">
+    <!-- <mat-tab-group>
         <mat-tab label="Danh sách cửa hàng">
             <app-list-shop></app-list-shop>
         </mat-tab>
@@ -7,6 +7,7 @@
         <mat-tab label="Thêm cửa hàng">
             <app-add-shop></app-add-shop>
         </mat-tab>
-    </mat-tab-group>
-</app-card> -->
-<app-detail-shop></app-detail-shop>
+    </mat-tab-group> -->
+    <app-list-shop></app-list-shop>
+</app-card>
+<app-detail-shop *ngIf="!isAdmin"></app-detail-shop>
