fix color toastr

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -121,3 +121,8 @@ mat-header-cell {
     overflow: hidden;
     vertical-align: middle;
 }
+
+.toast-message,
+.toast-title {
+    color: white;
+}
