--- a/src/app/pages/shop/list-shop/list-shop.component.html
+++ b/src/app/pages/shop/list-shop/list-shop.component.html
@@ -77,9 +77,12 @@
                 </button>
                 <button mat-icon-button color="primary" (click)="openEditForm(shop)">
                     <mat-icon>edit</mat-icon>
-                </button> -->
+                </button>
                 <button mat-icon-button color="warn" (click)="deleteShop(shop.key)">
                     <mat-icon>delete</mat-icon>
+                </button> -->
+                <button mat-icon-button color="warn">
+                    <mat-icon>block</mat-icon>
                 </button>
             </td>
         </ng-container>
