--- a/src/app/pages/admin/message-admin/message-admin.component.html
+++ b/src/app/pages/admin/message-admin/message-admin.component.html
@@ -4,7 +4,7 @@
         <h1 class="h3 mb-3">Messages</h1>
 
         <div class="card">
-            <div class="row g-0" style="min-height: 800px;">
+            <div class="row g-0" style="min-height: 600px;">
                 <div class="col-12 col-lg-5 col-xl-3 border-end">
                     <div class="px-4 d-none d-md-block">
                         <div class="d-flex align-items-center">
@@ -16,7 +16,7 @@
 
                     <a *ngFor="let user of users" href="javascript:" (click)="changeUserId(user)"
                         class="list-group-item list-group-item-action border-0 mb-3">
-                        <div class="badge bg-success float-end me-2">5</div>
+                        <!-- <div class="badge bg-success float-end me-2">5</div> -->
                         <div class="d-flex align-items-start ms-3">
                             <img src="{{ user.photoURL || 'assets/images/user/avatar-1.jpg' }}"
                                 class="rounded-circle me-1" alt="{{ user.displayName }}" width="40" height="40">
@@ -70,13 +70,16 @@
                     </div>
 
                     <div class="position-relative">
-                        <div class="chat-messages p-4">
+                        <div class="chat-messages p-4" #scrollChat>
+                            <p class="text-center" *ngIf="messages.length === 0">Không có tin nhắn ...</p>
                             <div *ngFor="let message of messages" class="pb-4"
                                 [ngClass]="{'chat-message-left': !(message.senderID === currentUser.uid), 'chat-message-right': (message.senderID === currentUser.uid)}">
                                 <div>
                                     <img [src]="(message.senderID === currentUser.uid) ? (currentUser.photoURL || 'assets/images/user/avatar-1.jpg') : (user.photoURL || 'assets/images/user/avatar-1.jpg')"
                                         class="rounded-circle mr-1" alt="Chris Wood" width="40" height="40">
-                                    <div class="text-muted small text-nowrap mt-2">2:33 am</div>
+                                    <div class="text-muted small text-nowrap mt-2">
+                                        {{ message.timestamp | dateFormat }}
+                                    </div>
                                 </div>
                                 <div class="flex-shrink-1 bg-light rounded py-2 px-3"
                                     [ngClass]="{'ms-3': !(message.senderID === currentUser.uid), 'me-3': (message.senderID === currentUser.uid)}">
@@ -95,8 +98,9 @@
 
                     <div class="flex-grow-0 py-3 px-4 border-top">
                         <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Type your message">
-                            <button class="btn btn-primary">Send</button>
+                            <input type="text" [(ngModel)]="message" (keyup.enter)="sentMsg()" class="form-control"
+                                placeholder="Type your message">
+                            <button class="btn btn-primary" type="button" (click)="sentMsg()">Send</button>
                         </div>
                     </div>
 
