--- a/src/app/theme/layouts/admin/nav-bar/nav-right/chat-user-list/friend/friend.component.html
+++ b/src/app/theme/layouts/admin/nav-bar/nav-right/chat-user-list/friend/friend.component.html
@@ -6,10 +6,9 @@
     <div class="media-body">
         <h6 class="chat-header">
             {{ friends.displayName || 'Người bí ẩn' }}
-            <!-- <small class="d-block" *ngIf="friends.time"
-                [ngClass]="{ 'text-c-green': friends.status, 'text-c-red': !friends.status }">
-                {{ friends.time }}
-            </small> -->
+            <small class="d-block" *ngIf="friends.lastLoginAt">
+                {{ friends.lastLoginAt | dateFormat }}
+            </small>
         </h6>
     </div>
 </div>
