fix layout and auth service

--- a/src/app/pages/admin/message-admin/message-admin.component.html
+++ b/src/app/pages/admin/message-admin/message-admin.component.html
@@ -79,9 +79,10 @@
                                 [ngClass]="{'chat-message-left': !(message.senderID === currentUser.uid), 'chat-message-right': (message.senderID === currentUser.uid)}">
                                 <div>
                                     <img [src]="(message.senderID === currentUser.uid) ? (currentUser.photoURL || 'assets/images/user/avatar-1.jpg') : (user.photoURL || 'assets/images/user/avatar-1.jpg')"
-                                        class="rounded-circle mr-1" alt="Chris Wood" width="40" height="40">
+                                        class="rounded-circle mr-1" alt="Chris Wood" width="40"
+                                        height="40">
                                     <div class="text-muted small text-nowrap mt-2">
-                                        {{ message.timestamp | dateFormat }}
+                                        {{ message.timestamp | timeFormat }}
                                     </div>
                                 </div>
                                 <div class="flex-shrink-1 bg-light rounded py-2 px-3"
