--- a/src/app/theme/layouts/admin/nav-bar/nav-right/chat-user-list/friend/friend.component.html
+++ b/src/app/theme/layouts/admin/nav-bar/nav-right/chat-user-list/friend/friend.component.html
@@ -6,7 +6,7 @@
     <div class="media-body">
         <h6 class="chat-header">
             {{ friends.displayName || 'Người bí ẩn' }}
-            <small class="d-block" *ngIf="friends.lastLoginAt">
+            <small class="d-block text-c-green" *ngIf="friends.lastLoginAt">
                 {{ friends.lastLoginAt | dateFormat }}
             </small>
         </h6>
