--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,7 +1,7 @@
 <title>Page Not Found</title>
-<img src="https://i.ibb.co/W6tgcKQ/softcodeon.gif">
+<img src="assets/images/404.gif">
 <h1 class="error-text">Whoops, We can't seem to find the resource you're looking for.</h1>
 <p class="text">Please check that the Web site address is spelled correctly. Or, </p>
 <div class="btn1">
-    <a class="error" routerLink="/">Go to Homepage</a>
+    <a class="error" routerLink="/dashboard">Go to Homepage</a>
 </div>
