--- a/src/app/pages/shop/detail-shop/detail-shop.component.scss
+++ b/src/app/pages/shop/detail-shop/detail-shop.component.scss
@@ -3,3 +3,9 @@
     border-radius: 10px;
     overflow: hidden;
 }
+
+.custom-list {
+    list-style-position: inside;
+    padding-left: 0;
+    margin-left: 0;
+}
