--- a/src/app/pages/voucher/add-voucher/add-voucher.component.html
+++ b/src/app/pages/voucher/add-voucher/add-voucher.component.html
@@ -3,8 +3,8 @@
     <div class="row d-flex justify-content-center">
         <article class="card fl-left ms-3">
             <section class="date">
-                <time datetime="23th feb">
-                    <span>23</span><span>feb</span>
+                <time>
+                    <span>0</span><span>day</span>
                 </time>
             </section>
             <section class="card-cont">
